--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "github.copilot.chat.agent.currentEditorContext.enabled": false,
-    "github.copilot.chat.alternateGptPrompt.enabled": false
+    "github.copilot.chat.alternateGptPrompt.enabled": false,
+    "livePreview.defaultPreviewPath": "/login Page/index.html"
 }
